--- a/public/css/style.css
+++ b/public/css/style.css
@@ -844,7 +844,7 @@ a:focus {
 }
 
 .cta-page {
-  background: url("../images/bg/banner.jpg") no-repeat;
+  background: url("../images/bg/banner2.png") no-repeat;
   background-size: cover;
   position: relative;
 }
